# pgcrab

./: Cargo.toml  IMPROVEMENTS.md  Makefile  PLAN.md  README.md  pgcrab.toml  users.toml
scripts/: reset-db.sh  setup-db.sh
src/: errors.rs  lib.rs  main.rs
src/admin/: mod.rs
src/analytics/: mod.rs
src/auth/: authenticate_user.rs  mod.rs
src/backend/: backend_connection.rs  mod.rs
src/config/: cli.rs  config.rs  mod.rs  shards.rs  types.rs  users.rs
src/frontend/: buffers.rs  client.rs  connection.rs  context.rs  mod.rs  peek.rs  proxy_responses.rs  sequence_tracker.rs  transport.rs
src/frontend/connection/: connection.rs  mod.rs  peek.rs  sequence_tracker.rs
src/frontend/handlers/: authenticating.rs  mod.rs  ready.rs  startup.rs
src/gateway/: mod.rs  pool.rs  session.rs
src/net/: conn_buff.rs  connection_buffer.rs  mod.rs
src/parser/: mod.rs
src/query_parser/: mod.rs
src/shared_types/: README.md  auth_stage.rs  backend_identity.rs  mod.rs  protocol_message_origin.rs  ready_status.rs  statement_signature.rs
src/tls/: mod.rs
src/wire/: mod.rs
src/wire/observers/: bind.rs  cancel_request.rs  close.rs  copy_data.rs  copy_done.rs  copy_fail.rs  describe.rs  execute.rs  flush.rs  function_call.rs  gss_response.rs  gssenc_request.rs  mod.rs  parse.rs  password_message.rs  query.rs  sasl_initial_response.rs  sasl_response.rs  sspi_response.rs  sync.rs  terminate.rs
src/wire/types/: message_type.rs
src/wire_protocol/: mod.rs  wire_serializable.rs
tests/: 00_shards_health.rs  01_auth_flow.rs  02_query_forward.rs
tests/support/: mod.rs
(+114 files in other folders)
