[package]
name = "pgcrab"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
smallvec = "1.15.1"
tokio = { version = "1.38", features = [
    "rt-multi-thread", # async runtime on a thread-pool
    "macros",          # select! and friends
    "net",             # TcpStream, Interest
    "io-util",         # AsyncReadExt / AsyncWriteExt
    "time",            # sleep, delay_queue, etc.
    "sync",            # mpsc, oneshot, Mutex, Semaphore

] }
