[package]
name = "pgcrab"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5", features = ["derive", "env"] }
humantime = "2.2.0"
memchr = "2.7.5"
once_cell = "1.21.3"
parking_lot = "0.12.4"
rand = "0.9.2"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
smallvec = "1.15.1"
tempfile = "3.20.0"
thiserror = "2.0.14"
tokio = { version = "1.38", features = [
    "fs",              # File, DirEntry, etc.
    "io-util",         # AsyncReadExt / AsyncWriteExt
    "macros",          # select! and friends
    "net",             # TcpStream, Interest
    "rt-multi-thread", # async runtime on a thread-pool
    "signal",          # signal handling
    "sync",            # mpsc, oneshot, Mutex, Semaphore
    "time",            # sleep, delay_queue, etc.
] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio-postgres = "0.7.13"
